--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 3.24)
 project(Program3)
-
 set(CMAKE_CXX_STANDARD 17)
-
-add_executable(Program3 main.cpp)
+add_executable(Program3 p3m.cpp p3.cpp p3.h)
